dark mode implementation

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="instagram-wrapper">
       <div class="instagram-phone">
-        <img src="./img/instagram-celular.png" alt="celular img" />
+        <img src="./img/cellphone.png" alt="celular img" />
       </div>
       <div class="instagram-continue">
         <div class="group">
@@ -25,15 +25,15 @@
           <a href="https://www.instagram.com/_mendesco/" class="instagram-login"
             >Continue as _mendesco</a
           >
-          <a href="https://www.instagram.com/" class="instagram-logout"
+          <span class="link-red"><a href="https://www.instagram.com/" class="instagram-logout"
             >Remove Account</a
-          >
+          ></span>
         </div>
         <div class="group">
           <p class="not-account">
-            <span class="link-blue"><a href="#">Switch Accounts</a></span>
+            <span class="link-red"><a href="#">Switch Accounts</a></span>
             or
-            <span class="link-blue"><a href="#">Sign Up</a></span>
+            <span class="link-red"><a href="#">Sign Up</a></span>
           </p>
         </div>
         <div class="get-the-app">
