carousel added + body clip path animation

--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
     <title>Instagram</title>
   </head>
   <body>
+    <div id="back_filter"></div>
+    <div id="back"></div>
     <div class="instagram-wrapper">
       <div class="instagram-phone">
-        <img src="./img/cellphone.png" alt="celular img" />
+        <img src="./img/cellphone.png" alt="cellphone img" />
+        <img id="carousel" src="img/none.png" alt="img carousel">
       </div>
       <div class="instagram-continue">
         <div class="group">
@@ -20,7 +23,7 @@
             alt="instagram logo"
           />
           <div class="profile-photo">
-            <img src="./img/user.jpg" alt="foto de perfil" />
+            <img src="./img/user.jpg" alt="profile photo" />
           </div>
           <a href="https://www.instagram.com/_mendesco/" class="instagram-login"
             >Continue as _mendesco</a
@@ -55,3 +58,4 @@
     </div>
   </body>
 </html>
+<script src="script.js"></script>
